# AtlasCube

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README.pl.md  build.py  partitions16MB.csv  partitions8MB.csv  sdkconfig.defaults
.github/workflows/: build.yml
ci/: build.py
components/app_state/: CMakeLists.txt  app_state.c  app_state.h  theme.c  theme.h
components/audio/: CMakeLists.txt  audio_dsp.c  audio_dsp.h  audio_engine.c  audio_engine.h  audio_file_player.c  audio_file_player.h  audio_levels.c  audio_levels.h  audio_net_player.c  audio_net_player.h  audio_player.c  audio_player.h  heap_report.c  heap_report.h  id3.c  id3.h  metadata.c  metadata.h
components/battery/: CMakeLists.txt  battery.c  battery.h
components/board_pins/: CMakeLists.txt  board_pins.c
components/bt_module/: CMakeLists.txt  bt.c  bt.h  bt_module.h  bt_qcc5125v2.c  qcc5125.h  qcc5125v2.h
components/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h  melodies.c  melodies.h
components/display/: CMakeLists.txt  Kconfig  display.c  display.h  idf_component.yml
components/display/drivers/: co5300.c  ili9341.c  ili9488.c  ssd1322.c  st7789v.c  st7796.c
components/encoder/: CMakeLists.txt  encoder.c  encoder.h
components/events/: CMakeLists.txt  events_service.c  events_service.h
components/icy_http_stream/: CMakeLists.txt  icy_http_stream.c  ts_demux.c  ts_demux.h
components/icy_http_stream/hls/: hls_playlist.c  hls_playlist.h
components/icy_http_stream/include/: icy_http_stream.h
components/libjpeg/: CMakeLists.txt  README.md  jmem_esp.c
components/libjpeg/jpeg-9f/: jconfig.h
components/mqtt_svc/: CMakeLists.txt  Kconfig  mqtt_config.c  mqtt_config.h  mqtt_svc.c  mqtt_svc.h
components/net_wallpaper/: CMakeLists.txt  net_wallpaper.c  net_wallpaper.h  net_wallpaper_sched.c  net_wallpaper_sched.h
components/network/: CMakeLists.txt  mdns_service.c  mdns_service.h  wifi_manager.c  wifi_manager.h
components/playlist/: CMakeLists.txt  playlist.c  playlist.h
components/rgb_led/: CMakeLists.txt  idf_component.yml  rgb_led.c  rgb_led.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/secrets/: CMakeLists.txt  secrets.c
components/services/: CMakeLists.txt  dim_schedule.c  dim_schedule.h  media_control.c  media_control.h  ntp_service.c  ntp_service.h  radio_service.c  radio_service.h  sd_player.c  sd_player.h
components/settings_ex/: CMakeLists.txt  settings.c  settings.h
components/touch/: CMakeLists.txt  Kconfig  touch.c  touch.h
components/touch/drivers/: cst816d.c  cst816d.h  ft6336u.c  ft6336u.h  xpt2046.c  xpt2046.h
components/ui/: CMakeLists.txt  lv_bin_image.c  lv_bin_image.h  ui_anim_bg.c  ui_anim_bg.h  ui_background.c  ui_background.h  ui_events.h  ui_label.c  ui_label.h  ui_manager.c  ui_manager.h  ui_nav.c  ui_nav.h  ui_profile.c  ui_profile.h  ui_timefmt.c  ui_timefmt.h
components/ui/fonts/: lv_font_montserrat_10_pl.c  lv_font_montserrat_120.c  lv_font_montserrat_12_pl.c  lv_font_montserrat_14_pl.c  lv_font_montserrat_18_pl.c  lv_font_montserrat_24_pl.c  lv_font_montserrat_72.c  lv_font_montserrat_80.c  lv_font_montserrat_8_pl.c  lv_font_montserrat_96.c  lv_font_weather_20.c  ui_fonts.c  ui_fonts.h
components/ui/screens/: img_atlas_logo.c  screen_bt.c  screen_bt.h  screen_clock.c  screen_clock.h  screen_equalizer.c  screen_equalizer.h  screen_event_notification.c  screen_event_notification.h  screen_events.c  screen_events.h  screen_home.c  screen_home.h  screen_layout_editor.c  screen_layout_editor.h  screen_mqtt.c  screen_mqtt.h  screen_ota.c  screen_ota.h  screen_playlist.c  screen_playlist.h  screen_radio.c  screen_radio.h  screen_sd_browser.c  screen_sd_browser.h  screen_sd_player.c  screen_sd_player.h  screen_settings.c  screen_settings.h  screen_splash.c  screen_splash.h  screen_update.c  screen_update.h  screen_wifi_ap.c  screen_wifi_ap.h  ui_screen.h
components/ui/screensavers/: screensaver_blank.c  screensaver_blank.h  screensaver_clockdigital.c  screensaver_clockdigital.h  screensaver_clockhands.c  screensaver_clockhands.h  screensaver_dashboard.c  screensaver_dashboard.h  screensaver_fireworks.c  screensaver_fireworks.h  screensaver_life.c  screensaver_life.h  screensaver_mqtt.c  screensaver_mqtt.h  screensaver_photo.c  screensaver_photo.h  screensaver_plasma.c  screensaver_plasma.h  screensaver_starfield.c  screensaver_starfield.h  screensavers.c  screensavers.h
components/ui/widgets/: animated_wheels_impl.h  animated_wheels_widget.c  animated_wheels_widget.h  calendar_widget.c  calendar_widget.h  clock_widget.c  clock_widget.h  control_action.c  control_action.h  controls_overlay_widget.c  controls_overlay_widget.h  event_indicator_widget.c  event_indicator_widget.h  hub_overlay_widget.c  hub_overlay_widget.h  mode_indicator_widget.c  mode_indicator_widget.h  net_fetch_overlay_widget.c  net_fetch_overlay_widget.h  now_playing_widget.c  now_playing_widget.h  station_icon_widget.c  station_icon_widget.h  touch_hotspots_widget.c  touch_hotspots_widget.h  vol_overlay_widget.c  vol_overlay_widget.h  vu_needle_widget.c  vu_needle_widget.h  vu_stereo_widget.c  vu_stereo_widget.h  vu_widget.c  vu_widget.h  weather_widget.c  weather_widget.h
components/updater/: CMakeLists.txt  updater.c
components/updater/include/: updater.h
components/weather/: CMakeLists.txt  weather.c  weather.h
components/web/: CMakeLists.txt  http_server.c  http_server.h  setup.html
components/ws/: CMakeLists.txt  ws_server.c  ws_server.h
docs/: ES32C28P.md  ES32C28P.pl.md  audio_pipeline.md  build-linux.md  build-windows.md  display_drivers.md  events.md  layout_editor.md  navigation.md
lib/: README.md
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/include/: defines.h  lv_conf.h
scripts/: README.md  build-flash.py  build.py  env_setup.py  flash-web.ps1  flash-web.py  img2lvgl.py  patch-esp-adf.sh  select-variant.sh
spiffs_image/config/: events.json  mqtt.json  settings.json  theme.json
spiffs_image/tools/: compress_web.py
spiffs_image/www/: app.js  bt.html  bt.js  editor.html  (+34 more)
tests/: test_invariant_setup.html
(+9 files in other folders)
