idf_component_register(
    SRCS
        "radio_service.c"
         "sd_player.c"
         "ntp_service.c"
         "dim_schedule.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        app_state
        ui
        audio
        esp_netif
        lwip
        playlist
        display
        settings_ex
        bt_module
        sdcard
)